--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
      },
     "pics":{
        "url": "https://www.reddit.com/r/pics/.json",
-       "terms": "animal, car, funny"
+       "terms": "trees, car, funny"
      }
   }
 }
