--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "sub-reddits":{
     "nba":{
       "url":"http://reddit.com/r/nba/.json",
-      "terms":"lebron, james, rose" 
+      "terms":"curry, lebron, timofey" 
     },
     "programming":{
       "url":"http://reddit.com/r/programming/.json",
