--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "sub-reddits":{
     "nba":{
       "url":"http://reddit.com/r/nba/.json",
-      "terms":"rose, lebron, timofey"
+      "terms":"rose, lebron, wade"
     },
     "programming":{
       "url":"http://reddit.com/r/programming/.json",
